--- a/1.html
+++ b/1.html
@@ -1,26 +1,57 @@
 <!doctype html>
 <html>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width" />
 <head>
  <title>for-korean story</title>
+<link rel="stylesheet" href="style.css">
+<script src="colors.js"></script>
 </head>
 <body>
   <h1><a href="index.html">한국의 독립을 위하여</a> </h1>
-  <p> 이 사이트는 한국의 숨겨진 역사, 소외계층, 부조리를 알리고
-  한국이 그 아픔으로부터 독립하여 아름다운 나라가 되길 바라며 제작되었습니다.</p>
+  <input type="button" value="night" onclick="
+     nightDayHandler(this);
+  ">
 
+  <div id="grid">
     <ol>
-      <li><a href = "1.html">한국의 이야기</a></li>
-      <li><a href = "2.html">세계 속 한국의 이야기</a></li>
-      <li><a href = "3.html">제작자의 이야기</a></li>
-    <ol>
+      <li><a href = "1.html" style = "color:red; text-decoration: none; ">한국의 이야기</a></li>
+      <li><a href = "2.html" text-decoration:underline; >세계 속 한국의 이야기</a></li>
+      <li><a href = "3.html" text-decoration:underline; >제작자의 이야기</a></li>
+    </ol>
 
+ <div id="article">
+   <p> 이 사이트는 한국의 숨겨진 역사, 소외계층, 부조리를 알리고
+   한국이 그 아픔으로부터 독립하여 아름다운 나라가 되길 바라며 제작되었습니다.</p>
 
-  <h2>한국의 이야기</h2>
-  <p>
+    <h2>한국의 이야기</h2>
+    <p>
+     내용을 뭘로 하면 좋을까
+   </p>
 
-  <p>
+    <p>
+        <div id="disqus_thread"></div>
+      <script>
 
-
-
+      /**
+      *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+      *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+      /*
+      var disqus_config = function () {
+      this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+      this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+      };
+      */
+      (function() { // DON'T EDIT BELOW THIS LINE
+      var d = document, s = d.createElement('script');
+      s.src = 'https://for-korea.disqus.com/embed.js';
+      s.setAttribute('data-timestamp', +new Date());
+      (d.head || d.body).appendChild(s);
+      })();
+      </script>
+      <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+      </p>
+    </div>
+   </div>
 </body>
 </html>
