--- a/1.html
+++ b/1.html
@@ -25,6 +25,11 @@
    한국이 그 아픔으로부터 독립하여 아름다운 나라가 되길 바라며 제작되었습니다.</p>
 
     <h2>한국의 이야기</h2>
+    <ol>
+      <li><a href = "1-1.html" style = "color : red; text-decoration:underline;">"세상을 바꿀 힘은 어디서 나오는가?"</a></li>
+      <li><a href = "2.html">음음음</a></li>
+      <li><a href = "3.html">고민중이에요</a></li>
+    </ol>
     <p>
      내용을 뭘로 하면 좋을까
    </p>
