--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <br>  가장 부강한 나라가 되기를 원하는 것은 아니다. 내가 남의 침략에 가슴이 아팠으니, 내 나라가 남을 침략하는 것을 원치 아니한다.
       <br>  우리의 부력은 우리의 생활을 풍족히 할 만하고,
       <br>  우리의 강력은 남의 침략을 막을 만하면 족하다. 오직 한없이 가지고 싶은 것은 높은 문화의 힘이다.
-                                                                     <br> -백범 김구"
+                                                                     <div style="text-align:center"> -백범 김구"</div>
       <br>
       Everyone who loves Korea! nice to meet you. This site is written in HTML, not relying on site tools.
       Please understand me if I'm not good at it!
