검색엔진 등록

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html>
 <head>
+ <meta name="naver-site-verification" content="c30b7fd786b3dcf7fe6b46214c223117ef257e34"/>
  <title>for-korea welcome</title>
  <meta charset="utf-8">
- <meta name="naver-site-verification" content="c30b7fd786b3dcf7fe6b46214c223117ef257e34"/>
 
  <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-KDKJMN1Q2S"></script>
@@ -88,9 +88,14 @@
     <p> " 이 사이트를 통해 한국의 숨겨진 역사, 소외계층, 부조리가 알려지고
     한국이 그 아픔으로부터 독립하여 아름다운 나라가 되길 바랍니다."</p>
 
-    <h2>사이트 제작 목적</h2>
+    <h2>사이트 소개</h2>
 
-    <p>안녕하세요. 한국을 사랑하시는 여러분, 반갑습니다.
+    <br>안녕하세요. 한국을 사랑하시는 여러분, 반갑습니다.
+    <br>이 사이트는 한국을 좀 더 따뜻하게 변화시키고자 만든 사이트입니다.
+    <br>이곳에서 한국과 관련된 다양한 자료들을 모아놓은 게시물들을 볼 수 있고, 여러 참고링크를 타고 한국에 대해 더 알아갈 수 있습니다.
+
+
+    <p>그럼, 따뜻한 눈으로 감상해주시길 부탁드립니다.</p>
 
       <br> "나는 우리 나라가 세계에서 가장 아름다운 나라가 되기를 원한다.
       <br>  가장 부강한 나라가 되기를 원하는 것은 아니다. 내가 남의 침략에 가슴이 아팠으니, 내 나라가 남을 침략하는 것을 원치 아니한다.
