토요일 수정

--- a/1-2.html
+++ b/1-2.html
@@ -4,37 +4,37 @@
 <meta name="viewport" content="width=device-width" />
 <head>
  <meta name="robots" content="index,follow" />
- <title>for-korea</title>
-
- <link rel="stylesheet" href="style.css">
- <style>
- body {
-   background: linear-gradient(-45deg, rgba(255, 0, 0, 0.7), rgba(0, 0, 255, .7)) fixed;
-   /* url('koreA.jpg') fixed;*/
-   background-size: cover;
-   margin: 0;
- }
-
-</style>
-<script src="colors.js"></script>
+ <title>for-korean story</title>
+ <script src="colors.js"></script>
 </head>
 <body>
-  <h1> <a href="index.html">한국의 독립을 위하여</a></h1>
+  <h1><a href="index.html" style = "text-decoration: none;">한국의 독립을 위하여</a> </h1>
   <input type="button" value="night" onclick="
      nightDayHandler(this);
   ">
+  <p> 이 사이트는 한국의 숨겨진 역사, 소외계층, 부조리를 알리고
+  한국이 그 아픔으로부터 독립하여 아름다운 나라가 되길 바라며 제작되었습니다.</p>
 
- <div id="grid">
+  <style>
+    a{
+      color: black;
+
+    }
+  </style>
+
     <ol>
-      <li><a href = "1.html" text-decoration:underline; >한국의 이야기</a></li>
-      <li><a href = "2.html" style = "color : red; text-decoration: none; " >세계 속 한국의 이야기</a></li>
-      <li><a href = "3.html" text-decoration:underline; >제작자의 이야기</a></li>
+      <li><a href = "1.html">한국의 이야기</a></li>
+      <li><a href = "2.html" >세계 속 한국의 이야기</a></li>
+      <li><a href = "3.html">제작자의 이야기</a></li>
     </ol>
-    <div id="article">
-      <p> 이 사이트는 한국의 숨겨진 역사, 소외계층, 부조리를 알리고
-      한국이 그 아픔으로부터 독립하여 아름다운 나라가 되길 바라며 제작되었습니다.</p>
 
-      <h2>세계 속 한국의 이야기</h2>
+
+  <h2>한국의 이야기</h2>
+    <ol>
+      <li><a href = "1-1.html" style = "color : red; text-decoration:underline;">"세상을 바꿀 힘은 어디서 나오는가?"</a></li>
+      <li><a href = "2.html">음음음</a></li>
+      <li><a href = "3.html">고민중이에요</a></li>
+    </ol>
 
       <p>
         <div id="disqus_thread"></div>
@@ -58,7 +58,6 @@
       </script>
       <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
       </p>
-     </div>
- </div>
+
 </body>
 </html>
