--- a/3.html
+++ b/3.html
@@ -5,6 +5,7 @@
 <head>
  <title>for-Producer's Dream</title>
 <link rel="stylesheet" href="style.css">
+<meta name="robots" content="index,follow" />
  <style>
      body {
        background: linear-gradient(-45deg, rgba(255, 0, 0, 0.7), rgba(0, 0, 255, .7)) fixed;
@@ -36,7 +37,7 @@
     한국이 그 아픔으로부터 독립하여 아름다운 나라가 되길 바라며 제작되었습니다."</p>
 
    <h2>제작자의 이야기</h2>
-  
+
 
     <div id="disqus_thread"></div>
      <script>
