--- a/index.html
+++ b/index.html
@@ -2,8 +2,26 @@
 <html>
 <head>
  <meta name="naver-site-verification" content="c30b7fd786b3dcf7fe6b46214c223117ef257e34"/>
- <title>for-korea welcome</title>
+ <link rel="canonical" href="https://delight28.github.io/">
+ <title>한국의 독립을 위하여</title>
  <meta charset="utf-8">
+ <meta name="robots" content="index,follow" />
+ <meta name="description" content="한국을 사랑하고 싶은 사람들을 위하여">
+ <META NAME="subject" CONTENT="한국의 다양한 양상, 소외계층, 역사, 부조리"/>
+ <META NAME="Keywords" CONTENT="한국, 소외계층, 역사, 부조리"/>
+ <meta property="og:type" content="website">
+<meta property="og:title" content="한국의 독립을 위하여">
+<meta property="og:description" content="한국을 사랑하고 싶은 사람들을 위하여">
+<meta property="og:image" content="http:///delight28.github.io/koreA.jpg">
+<meta property="og:url" content="https://delight28.github.io/index.html">
+<meta name="viewport" content="width=device-width">
+<meta property="al:ios:url" content="applinks://docs">
+<meta property="al:ios:app_store_id" content="12345">
+<meta property="al:ios:app_name" content="App Links">
+<meta property="al:android:url" content="applinks://docs">
+<meta property="al:android:app_name" content="App Links">
+<meta property="al:android:package" content="org.applinks">
+<meta property="al:web:url" content="http://applinks.org/documentation">
 
  <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-KDKJMN1Q2S"></script>
@@ -14,16 +32,84 @@
   gtag('config', 'G-KDKJMN1Q2S');
 </script>
 
-  <link rel="stylesheet" href="style.css">
   <style>
+  a{
+    color: black;
+  }
+
+    h1{
+    border-bottom:none;
+    }
+
+  }
+  #topMenu {
+        height: 30px; /* 메인 메뉴의 높이 */
+        width: 850px; /* 메인 메뉴의 넓이 */
+  }
+  #topMenu ul {  /* 메인 메뉴 안의 ul을 설정함: 상위메뉴의 ul+하위 메뉴의 ul */
+        list-style-type: none; /* 메인 메뉴 안의 ul 내부의 목록 표시를 없애줌 */
+        margin: 0px; /* 메인 메뉴 안의 ul의 margin을 없앰 */
+        padding: 0px; /* 메인 메뉴 안의 ul의 padding을 없앰 */
+  }
+  #topMenu ul li { /* 메인 메뉴 안에 ul 태그 안에 있는 li 태그의 스타일 적용(상위/하위메뉴 모두) */
+        color: white; /* 글씨 색을 흰색으로 설정 */
+        background-color: #2d2d2d; /* 배경 색을 RGB(2D2D2D)로 설정 */
+        float: left; /* 왼쪽으로 나열되도록 설정 */
+        line-height: 30px; /* 텍스트 한 줄의 높이를 30px로 설정 */
+        vertical-align: middle; /* 세로 정렬을 가운데로 설정 */
+        text-align: center; /* 텍스트를 가운데로 정렬 */
+        position: relative; /* 해당 li 태그 내부의 top/left 포지션 초기화 */
+  }
+  .menuLink, .submenuLink {     /* 상위 메뉴와 하위 메뉴의 a 태그에 공통으로 설정할 스타일 */
+        text-decoration:none; /* a 태그의 꾸밈 효과 제거 */
+        display: block; /* a 태그의 클릭 범위를 넓힘 */
+        width: 150px; /* 기본 넓이를 150px로 설정 */
+        font-size: 12px; /* 폰트 사이즈를 12px로 설정 */
+        font-weight: bold; /* 폰트를 굵게 설정 */
+        font-family: "Trebuchet MS", Dotum; /* 기본 폰트를 영어/한글 순서대로 설정 */
+  }
+  .menuLink { /* 상위 메뉴의 글씨색을 흰색으로 설정 */
+      color: white;
+  }
+  .topMenuLi:hover .menuLink {     /* 상위 메뉴의 li에 마우스오버 되었을 때 스타일 설정 */
+      color: red;                  /* 글씨 색 빨간색 */
+      background-color: #4d4d4d; /* 배경색을 밝은 회색으로 설정 */
+  }
+  .submenuLink { /* 하위 메뉴의 a 태그 스타일 설정 */
+      color: #2d2d2d; /* 글씨 색을 RGB(2D2D2D)로 설정 */
+      background-color: white; /* 배경색을 흰색으로 설정 */
+      border: solid 1px black; /* 테두리를 설정 */
+    margin-top: -1px; /* 위 칸의 하단 테두리와 아래칸의 상단 테두리가 겹쳐지도록 설정 */
+  }
+  .longLink {  /* 좀 더 긴 메뉴 스타일 설정 */
+      width: 190px; /* 넓이는 190px로 설정 */
+  }
+  .submenu { /* 하위 메뉴 스타일 설정 */
+      position: absolute; /* html의 flow에 영향을 미치지 않게 absolute 설정 */
+      height: 0px; /* 초기 높이는 0px로 설정 */
+      overflow: hidden; /* 실 내용이 높이보다 커지면 해당 내용 감춤 */
+      transition: height
+      .2s; /* height를 변화 시켰을 때 0.2초간 변화 되도록 설정(기본) */
+      -webkit-transition: height .2s; /* height를 변화 시켰을 때 0.2초간 변화 되도록 설정(구버전 크롬/사파라ㅣ) */
+      -moz-transition: height .2s; /* height를 변화 시켰을 때 0.2초간 변화 되도록 설정(구버전 파폭) */
+      -o-transition: height .2s; /* height를 변화 시켰을 때 0.2초간 변화 되도록 설정(구버전 오페라) */
+  }
+  .topMenuLi:hover .submenu { /* 상위 메뉴에 마우스 모버한 경우 그 안의 하위 메뉴 스타일 설정 */
+      height: 93px; /* 높이를 93px로 설정 */
+  }
+  .submenuLink:hover { /* 하위 메뉴의 a 태그의 마우스 오버 스타일 설정 */
+      color: red; /* 글씨색을 빨간색으로 설정 */
+      background-color: #dddddd; /* 배경을 RGB(DDDDDD)로 설정 */
+  }
+
   body {
     background: linear-gradient(-45deg, rgba(255, 0, 0, 0.7), rgba(0, 0, 255, .7)) fixed;
     /* url('koreA.jpg') fixed;*/
-  background-size: cover;
-
-
+   background-size: cover;
     margin: 0;
+    text-align: center;
   }
+
   </style>
   <script>
   var Links = {
@@ -62,6 +148,7 @@
     }
   }
   </script>
+  <!--[if lt IE 9]> <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script> <![endif]-->
 </head>
 <body>
   <input type="button" value="night" onclick="
@@ -76,12 +163,37 @@
   <!--<img src = "koreA.jpg" style="width: 343px;
   height: 372px;" > 제목에만 뜨게 하고 싶은데..-->
 
-<div id="grid">
-    <ol>
-        <li><a href = "1.html">한국의 이야기</a></li>
-        <li><a href = "2.html">세계 속 한국의 이야기</a></li>
-        <li><a href = "3.html">제작자의 이야기</a></li>
-    </ol>
+  <nav id="topMenu" >
+    <ul>
+       <li class="topMenuLi">
+         <a class="menuLink" href="1.html">한국의 이야기</a>
+         <ul class="submenu">
+            <li><a class="submenuLink longLink">독립영웅</a></li>
+            <li><a class="submenuLink longLink">한국의 부조리</a></li>
+            <li><a class="submenuLink longLink">한국의 소외계층</a></li>
+        </ul>
+      </li>
+      <li>|</li>
+      <li class="topMenuLi">
+          <a class="menuLink" href="2.html">세계 속 한국의 이야기</a>
+          <ul class="submenu">
+              <li><a class="submenuLink">세계 속 독립영웅</a></li>
+              <li><a class="submenuLink">한국과 외국</a></li>
+          </ul>
+      </li>
+      <li>|</li>
+      <li class="topMenuLi">
+          <a class="menuLink" href="3.html">제작자의 이야기</a>
+          <ul class="submenu">
+              <li><a class="submenuLink">VR이야기</a></li>
+              <li><a class="submenuLink">청소년들에게</a></li>
+              <li><a class="submenuLink">하나님의 이야기</a></li>
+          </ul>
+      </li>
+    </ul>
+  </nav>
+
+
 
   <div id="article">
     <br>
