--- a/1.html
+++ b/1.html
@@ -6,28 +6,74 @@
  <title>for-korean story</title>
 <link rel="stylesheet" href="style.css">
 <script src="colors.js"></script>
+<link rel="stylesheet" href="style2.css">
+
+<style>
+body {
+/*background: linear-gradient(-45deg, rgba(255, 0, 0, 0.7), rgba(0, 0, 255, .7)) fixed;*/
+ background-image: url(koreA.jpg);
+ background-size: cover;
+ margin: 0;
+ text-align: center;
+}
+
+
+
+</style>
 </head>
 <body>
-  <h1><a href="index.html">한국의 이야기</a> </h1>
+  <nav id="topMenu" >
+    <ul>
+       <li class="topMenuLi">
+         <a class="menuLink" href="1.html">한국의 이야기</a>
+         <ul class="submenu">
+            <li><a class="submenuLink longLink" href="1.html" target="_blank" >한국의 독립영웅</a></li>
+            <li><a class="submenuLink longLink" href="2.html" target="_blank">한국의 모순</a></li>
+            <li><a class="submenuLink longLink" href="3.html" target="_blank">한국의 소외계층</a></li>
+        </ul>
+      </li>
+      <li>|</li>
+      <li class="topMenuLi">
+          <a class="menuLink" href="2.html" target="_blank">세계 속 한국의 이야기</a>
+          <ul class="submenu">
+              <li><a class="submenuLink" target="_blank">세계 속 독립영웅</a></li>
+              <li><a class="submenuLink" target="_blank">한국과 외국</a></li>
+          </ul>
+      </li>
+      <li>|</li>
+      <li class="topMenuLi">
+          <a class="menuLink" href="3.html">제작자의 이야기</a>
+          <ul class="submenu">
+              <li><a class="submenuLink">VR이야기</a></li>
+              <li><a class="submenuLink">청소년들에게</a></li>
+              <li><a class="submenuLink">하나님의 이야기</a></li>
+          </ul>
+      </li>
+    </ul>
+  </nav>
+
+  <h1><a href="index.html">한국의 독립영웅</a> </h1>
   <input type="button" value="night" onclick="
      nightDayHandler(this);
   ">
 
   <div id="grid">
-    <ol>
-      <li><a href = "1.html" style = "color:red; text-decoration: none; ">한국의 이야기</a></li>
-      <li><a href = "2.html" text-decoration:underline; >세계 속 한국의 이야기</a></li>
-      <li><a href = "3.html" text-decoration:underline; >제작자의 이야기</a></li>
+  <ol>
+      <li><a href = "1.html" target="_blank" style = "color:red; text-decoration: none;">오광심</a></li>
+      <li><a  text-decoration:underline; >---</a></li>
+      <li><a  text-decoration:underline; >---</a></li>
     </ol>
 
  <div id="article">
-   <p> 이 사이트는 한국의 숨겨진 역사, 소외계층, 부조리를 알리고
-   한국이 그 아픔으로부터 독립하여 아름다운 나라가 되길 바라며 제작되었습니다.</p>
+   <h2>200쪽 보고서를 외운 독립영웅</h2>
+  </small><br>아래 글은 한국과 여러분을 이어주는 통로라고 생각하고 작성하였습니다.
+   <br>제 글은 유튜브 영상의 내용/댓글을 주로 요약하는 형식으로 쓰여져 있느니, 영상 링크를 타고 원작자의 영상을 감상하시길 권합니다.
+   <br>영상이 쉬운 이해를 돕는다면, 제 글은 실제 사례로 공감하실 수 있습니다.</small>
 
-    <h2>한국의 이야기</h2>
+
 
     <p>
-     내용을 뭘로 하면 좋을까
+     게시글 준비 중입니다! 조금만 기다려 주세용!ㅠㅠ
    </p>
 
     <p>
@@ -54,5 +100,6 @@
       </p>
     </div>
    </div>
+
 </body>
 </html>
