--- a/2.html
+++ b/2.html
@@ -5,36 +5,236 @@
 <head>
  <meta name="robots" content="index,follow" />
  <title>for-korea</title>
-
+ <link rel="stylesheet" href="style2.css">
  <link rel="stylesheet" href="style.css">
+ <link href="https://fonts.googleapis.com/css?family=Nanum+Myeongjo&display=swap" rel="stylesheet">
+<style type="text/css">
+ body {font-family: 'Nanum Myeongjo', serif;}
+</style>
  <style>
- body {
+   body {
    background: linear-gradient(-45deg, rgba(255, 0, 0, 0.7), rgba(0, 0, 255, .7)) fixed;
-   /* url('koreA.jpg') fixed;*/
-   background-size: cover;
-   margin: 0;
- }
+    /*background-image: url(koreA.jpg);*/
+    background-size: cover;
+    margin: 0;
+    text-align: center;
+   }
+
 
 </style>
 <script src="colors.js"></script>
 </head>
 <body>
-  <h1> <a href="index.html">한국의 독립을 위하여</a></h1>
+<nav id="topMenu" >
+    <ul>
+       <li class="topMenuLi">
+         <a class="menuLink" href="1.html">한국의 이야기</a>
+         <ul class="submenu">
+            <li><a class="submenuLink longLink" href="1.html" target="_blank" >한국의 독립영웅</a></li>
+            <li><a class="submenuLink longLink" ahref="2.html" target="_blank">한국의 모순</a></li>
+            <li><a class="submenuLink longLink" href="3.html" target="_blank">한국의 소외계층</a></li>
+        </ul>
+      </li>
+      <li>|</li>
+      <li class="topMenuLi">
+          <a class="menuLink" href="2.html" target="_blank">세계 속 한국의 이야기</a>
+          <ul class="submenu">
+              <li><a class="submenuLink" target="_blank">세계 속 독립영웅</a></li>
+              <li><a class="submenuLink" target="_blank">한국과 외국</a></li>
+          </ul>
+      </li>
+      <li>|</li>
+      <li class="topMenuLi">
+          <a class="menuLink" href="3.html">제작자의 이야기</a>
+          <ul class="submenu">
+              <li><a class="submenuLink">VR이야기</a></li>
+              <li><a class="submenuLink">청소년들에게</a></li>
+              <li><a class="submenuLink">하나님의 이야기</a></li>
+          </ul>
+      </li>
+    </ul>
+  </nav>
+
+  <h1> <a href="index.html">한국의 모순</a></h1>
   <input type="button" value="night" onclick="
      nightDayHandler(this);
   ">
 
  <div id="grid">
     <ol>
-      <li><a href = "1.html" text-decoration:underline; >한국의 이야기</a></li>
-      <li><a href = "2.html" style = "color : red; text-decoration: none; " >세계 속 한국의 이야기</a></li>
-      <li><a href = "3.html" text-decoration:underline; >제작자의 이야기</a></li>
+      <li><a href = "2.html" style = "color : red; text-decoration: none; ">망 중립성1 - 두 얼굴의 네이버</a></li>
+      <li><a href = "2-2.html" text-decoration:underline; >망 중립성2 - 유튜브와 통신사, 속사정</a></li>
+      <li><a href = "2-3.html" text-decoration:underline; >망 중립성3 - 미해결된 악성기사들, 설리의 죽음</a></li>
+
     </ol>
     <div id="article">
-      <p> 이 사이트는 한국의 숨겨진 역사, 소외계층, 부조리를 알리고
-      한국이 그 아픔으로부터 독립하여 아름다운 나라가 되길 바라며 제작되었습니다.</p>
+      <h2>망중립성1 - 두얼굴의 네이버 정리</h2>
+      <p><br>우리는 네이버에 의존하고, 이슈가 터지면 왜 그렇게 순식간에 기사들이 양산되는지 인식하지 못한 채 살아갑니다. 실시간 검색어는 과연 우리의 의지로 조정되는 것일까요?
+      <br>우리는 불공정한 포털 사이트에 어떻게 대응해야 할까요?
+      <br>김인성님의 책을 보면서 생각해봅시다. </p>
+      <img src="http://image.kyobobook.co.kr/images/book/xlarge/265/x9788994126265.jpg" width="175" height="250">
 
-      <h2>세계 속 한국의 이야기</h2>
+      <br><p><font color="#FFB2D9">*현재 네이버는 C-RANK와 같은 알고리즘, 뉴스스탠드 등으로 많이 개선되는 모습을 보여주고 있습니다.
+      <br>    현재에도 책의 내용과 같은 모습이라고 생각하지는 말아주세요!
+      <br>    그러나 다시 공정하지 못한 모습을 보여줄 때, 이 책을 참고로 대응하시길 권합니다. </p></font>
+
+      <p><br><b>▼내용 요약</b>
+      <br><h3>#서론. 한국은 더 이상 it강국X</h3>
+      <br>-현재는 <u>소프트웨어, 콘텐츠 중심의 플랫폼이 IT산업을 지배</u>합니다. 
+      <br>인터넷에서 가장 많은 사용자를 확보한 업체가 통신으로부터 서비스까지 장악하므로 시장을 선도하려면 창의적인 중소기업들과 벤처들이 성장해야합니다.
+      <br>한국에서는 불가능하다고 합니다. 왜일까요?<p>
+
+      <p><br>재벌 중심의 산업 구조가 인터넷에서 재현되고, 
+      <br>포털은 사용자에게 더 많은 수익을 짜내려고 불공정행위를 하기 때문입니다.
+      <br>-한국의 포털은 이익을 위해 점유율에만 관심이 있습니다. 그들은 사용자들을 포털 내부에 묶어두려고 메인 화면을 악용해 낚시를 하고, 우리 스스로 불법복제를 하도록 부추깁니다.<p>
+
+      <p><br><h3>#1화. 네이버 비판</h3>
+      <h4>1.불법 복제</h4>, 네이버가 원본을 찾아주지 않는다.
+      <br>: 블로그, 지식인, 카페 등 네이버 내부의 자료만 보여줍니다.<sup>외국은 원본</sup>
+      <br>  인터넷에 글을 올리는 이유는 자신을 기억해주길 바라기 때문으로도 해석될 수 있는데요. 
+      <br>  포털이 복제된 자료 먼저 보여주면 창작자들은 글을 다시 올리고 싶어하지 않게 됩니다.</p>
+
+      <p><h4>2. 검색 조작</h4>
+      <br>:<u>네이버 트렌드 연감</u>의 사라진 노무현의 기록을 비판하자 네이버는 통계집이 아니라 잡지라고 이야기 했습니다.
+      <br><i>기록되지 않으면 기억되지 않습니다. </i>
+      <br>네이버의 이런 편집은 우리 기억에서 노무현을 지운 것으로 해석될 수 있습니다.<p>
+
+
+      <p><br>ex. 2010년 지방선거 당시 한명숙에 관한 추천 검색어를 의도적으로 가렸습니다.
+      <br><small>구글 트렌드상 한명숙이 앞설 때가 많았지만, 결과적으로 0.6퍼센트 차이로 지고 말았죠.
+      <br>언론과 공식여론조사까지 진실을 보여주지 않기 때문에 질 것으로 생각해서, 여론을 몰라서 투표율 저하된 것입니다.</small>
+
+      <br><h4>Sol=></h4>이런 문제를 알리기 위해 <u>엔지니어들이 분발</u>해야 합니다. <u>인문학에 관심</u>을 가져야 일반사람들이 이해 가능한, 논리적인 it글을 쓸 수 있습니다. </p>
+
+      <p><h4>3. 망 중립성</h4>
+      :<b>네트워크 사업자는 모든 콘텐츠를 동등하게 취급해야하고 어떤 차별도 하지 않아야 한다는 것을 의미합니다.</b>
+      <br>한국의 통신사들은 망 중립성을 무시했습니다. <small>카카오톡 때문에 네트워크 사용량이 증가했다며 돈을 더 받기도 했죠.</small></p>
+      <p>>네이버의 역사
+      <br>: 초기에는 프리챌이 시장의 주도권을 쥐고 있었습니다.
+      <br>2002년 유료화 시도했다가 몰락했고 네이버는 지식인 서비스로 폭발적 인기를 누리기 시작했습니다.
+      <br>그러나 네이버에는 고유한 서비스 부족했고 타 사이트 서비스 베끼기와 점유율 유지에 힘썼습니다. 
+      <br><small>cf) 블로그 서비스-> 외국에서 유행하던 것을 따라한 것입니다.
+      <br>    지식인-> 지식검색사이트 한겨레와 유사합니다.</small></p>
+
+      <p>>통신시장의 역사
+      <br>: 한국은 CDMA 기술 적극 도입하며 이동통신사가 폭발 성장을 하게 되었습니다.
+      <br>이동통신사는 수익 극대화하기 위해 문자 메시지를 표준 용량의 절반으로 줄이고, mms로 추가요금 유도했으며 wi-fi기능을 의도적으로 막아 갈라파고스화를 시켜버렸습니다.
+      <br><small>이에 비해, 아이폰은 이동통신사의 제약에서 해방된 최초의 휴대폰으로 각 이동통신사 전용 애플리케이션이 따로 설치되어 있지 않아 자유롭습니다.</small></p>
+
+      <p><br><h3>#2. 어뷰징</h3>
+      <br>>네이버 점유율이 70%에 달했습니다. 인기키워드는 경매를 통해 한 클릭 당 15000원을 선불로 가져갑니다.
+      <br><h5>검색어의 가격은 인터넷 점유율에 비례하고 점유율은 검색성능에 비례하지만, 한국 포털은 성능에 관심 없고 인기 검색어로 사용자의 발을 묶습니다.</h5></p>
+
+      <h5>>네이버는 첫 페이지에 특정 검색어 링크를 배치해서 우리들의 관심을 통제합니다. 인기 검색어 조작까지 하죠.</h5>
+
+      <p><u>>메인화면을 새로 바꾸고 최초의 폭풍클릭을 받는 언론사는 정해져 있습니다. 같은 내용기사 반복해서 만듭니다.</u> 
+      <br>: <b>첫 페이지 글이 검색 키워드 링크입니다.</b>그래서 연예인에 대한 검색어로 도배되게 하는 것입니다. 
+      <br>  <image src="http://file3.instiz.net/data/file3/2018/02/05/6/d/4/6d4545c54237aeeab8192619706e4651.jpg" width="175" height="250" alt="네이버에 도배된 송혜교 기사">
+      <br>그렇게 네이버가 선정한 검색 통계에 진입하게 되고, 우리는 그들의 아바타가 됩니다.
+      <br>실제 검색어와 관련 없는 선정적이고 기발한 제목... 내용은 중요하지 않고 얼마나 클릭했는지가 중요하게 된 것이죠.
+      <br>이것이 포털의 경쟁력을 유지시키는 마지막 수단이 되어 버렸습니다.</p>
+
+      <p><br><h4>>한국 포털과 인터넷 문제의 원인, 어뷰징</h4>
+      :어뷰징은
+      <br>남용, 악용, 오용들의 부정행위
+      <br>사용자를 교란해 특정 사이트로 끌어들이는 행위
+      <br>인기검색어가 든 기사를 반복 전송하여 사용자를 끌어들이는 것
+      <br>자극적인 내용으로 사용자의 관심을 유도하는 것
+      <br>으로 해석 될 수 있습니다.
+      <br>- 포털은 사용자들에게 어뷰징을 부추겼습니다. 이로 인해 사용자들이 자발적으로 콘텐츠 불법 복제하고 그것이 포털에 쌓여버렸습니다.</p>
+
+      <p><br><small>if) 콘텐츠 제작자가 불법 복제한 글을 삭제하라고 요청하면, 
+      <br>이이제이<sup>사용자로 저작권자를 막는다</sup>를 했습니다. 복사한 사람한테 따지라고 한 것이죠. 그렇게, 포털은 저작권자들의 반발을 막는 방패로 사용자들을 활용해왔습니다.</small></p>
+
+      <p><br><h5>>검색엔진 최적화</h5>: 검색자의 요구를 따라 유용하며 높은 품질을 갖고 있는 컨텐츠를 계속적으로 제작하고 배포하는 것을 말합니다.
+      <br><br><b>문제></b>
+      <br>- 포털 때문에 언론사들의 신문기사조차 불법 복제되기 때문에 먹고 살기 위해 포털 메인에서 사용자들 낚시질 해왔습니다. 포털은 이를 약점으로 삼고 언론사에게 압력을 가했습니다.
+      <br>- 포털은 권력자들의 요구에 따라 기사를 고쳤습니다.
+      <br>- 좋은 아이디어 가진 벤처가 사이트를 열어도 포털이 사용자를 넘겨주지 않아서 버틸 수가 없고, 이런 사이트를 금방 베껴버렸습니다.</p>
+
+      <p><br><b>Sol =></b>언론사들도 포털도 기사편집에 대해 책임을 져야합니다. 메인화면 편집도 콘텐츠 제작자들에게 도움이 되어야 합니다. 
+      <br>왜 뽑았는지 알려주고, 어떻게 하면 좋을지 평가도 해야 합니다. 메인화면에 뽑힌 사람들이 권리를 요구해야합니다. 콘텐츠 때문에 포털 메인 방문해서 광고도 봐 주는거니까요.</p>
+
+      <p><br>>벤처 등장이 불가능한 구조
+    <br>  IMF로 규제가 완화된 짧은 기간 동안 자유로운 분위기가 형성되어<sup><small>돈없어도 되니까</small></sup>
+     <br> 벤처 활성화가 되었습니다. 1990년 말, 한국은 실리콘 밸리와 맞먹을 정도로 창의력이 넘치는 나라였습니다.
+      <br>그러나 사회가 다시 보수화되면서 대기업, 통신사, 포털 위주의 정책과 창의성을 막는 규제가 만들어지기 시작했습니다. 재벌 중심의 산업구조가 인터넷에서 그대로 재현된 것입니다.</p>
+
+    <p><br>  >포털 경쟁력 상실의 역사
+    <br>  인터넷은 누구나 자유롭게 연결 가능했지만 대중화가 되면서 비대칭 발생했습니다. 많은 서버가 인터넷은 누구나 자유롭게 연결 가능했지만 대중화가 되면서 비대칭 발생했습니다.
+    <br>  많은 서버가 필요한 생산자들이 통신사의 데이터 센터에 모여들었습니다. 통신사들은 소비자들에게 수익을 얻을 수 있었죠.
+      <br>그러나 문제는 통신사들은 돈 벌어주는 콘텐츠 생산자들까지도 통제했다는 것입니다. <b>통신사는 사용자에게서 수익을 얻고 생산자들까지 괴롭히면 안 됩니다.</b>
+      <br>가장 큰 인터넷 업체가 독립할 생각을 하지 않고 특혜에 만족했기 때문에 이런 상황이 되었습니다. 포털이 망 중립성을 위해 싸우지 않았기 때문입니다.
+      <br><small>*그래서 2019년 9월, 유튜브와의 문제가 생겼습니다.<a href = "2-2.html" text-decoration:underline; ><i>망 중립성2 - 유튜브와 통신사, 속사정</i></a></small>
+      <br><image src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRC9QZQgv0N8Lc8fO9cVxm4EYL0i4ZLVAcsmOoTSxXVnzPEWc9p" width="300" height="250" alt="망 중립성을 지키지 못한 통신사"></p>
+
+
+      <p><br>> 1990년말 구글 vs 국내 포털
+      <br><i>한국</i>
+      <br>: 좋은 소프트웨어, 하드디크스, 안정성에 돈을 썼습니다. 한국 자료만 처리하기도 벅차니까 성능은 저 멀리로 놔둔 채 말이져; 
+      <br>덩치 키우기 위해 서비스 베끼고, 콘텐츠 복제하며, 파워 블로거 지원해서 돈 벌게 하고 검색 트래픽 몰아주었습니다. 
+      <br>기업 욕하는 글을 블라인드 처리하고 플랫폼 등의 미래 경쟁력을 위한 새로운 기술에 투자하지 않았습니다.</p> 
+
+    <p>  <br><i>구글</i>
+      <br>: 공짜 리눅스, 피시용 하드디스크, 안정성을 소프트웨어로 해결 해버렸습니다.
+      <br> 세계 데이터 다 모아서 최고 빠른 검색이 될 것을 기대하며 말이죠, 심지어 공짜로 무선 랜을 달아주고, 후진국에 컴퓨터를 제공했어요!
+      <br> 크롬 웹브라우저 무료로. 어떤 플랫폼에서도 검새 허용, 무료로..
+      <br> 거대한 클라우드를 만들고 이중 삼중 복사를 해서 데이터 안전을 보장했습니다.
+      <br> <small>그 외에도 너무 많습니다. 광고 검색 오염 해결, 콘텐츠 업체들과 상생, 검색창 달아주면 수익 나눔. 안드로이드 폰에 검색창을 달 경우 검색 수익을 통신사와 나눔...</small></p>
+
+      <p> <br><h3>#가장 중요한것, 신뢰성</h3>
+      <br> >해결 위한 법 조항
+       <br><h4>1. 검색은 원본을 우선제시</h4>
+       <br>: 복사본보다 원본을 먼저 제시하면 검색으로 이익 얻으려는 불법 복제를 하는 일이 사라질 것입니다. 
+       <br>대신 좋은 콘텐츠가 퍼지는 펌 문화가 원저작자에 도움이 되어 장려되고 원본 사이트에 사람이 몰려 방문자 증가할 수 있습니다. 포털의 갇힌 트래픽의 물고만 트면 활기 생깁니다. 
+
+       <br><h4>2. 검색 결과에서 광고는 30% 이상 차지 불가</h4>
+       <br>: 광고 분량 제한하면 원본 웹 페이지에도 광고를 실어 수익 분배효과가 생기면서 포털과 중소 사이트 상생 가능합니다.
+
+
+      <br> <h5>마지막으로 이 모든 포털의 문제에서 우리들이 취할 수 있는 방법을 말씀드릴게요!</h5>
+       <br><h4>바로 ‘팃포탯 게임’의 우승 원리입니다.</h4>
+       <br><b><i>“먼저 협력하세요, 배신은 즉각 응징하세요, 배신자를 용서하세요.”</i></b>
+       <br>그렇게 우리, 아름다운 대한민국을 만듭시다.</p>
+      <p><br><small> cf) 미생물학 균학 박사 김미선님은 이렇게 말씀하셨습니다.
+      <br> “95% 개체가 배신 전략 취하는 조건에서도 상호협력자들이 5%만 된다면 진화상 우위 점할 수 있어요. 박테리아도 취하는 전략입니다.”</small></p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
       <p>
         <div id="disqus_thread"></div>
@@ -60,5 +260,6 @@
       </p>
      </div>
  </div>
+ </p>
 </body>
 </html>
