--- a/3.html
+++ b/3.html
@@ -5,7 +5,12 @@
 <head>
  <title>for-Producer's Dream</title>
 <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="style2.css">
 <meta name="robots" content="index,follow" />
+<link href="https://fonts.googleapis.com/css?family=Nanum+Myeongjo&display=swap" rel="stylesheet">
+<style type="text/css">
+body {font-family: 'Nanum Myeongjo', serif;}
+</style>
  <style>
      body {
        background: linear-gradient(-45deg, rgba(255, 0, 0, 0.7), rgba(0, 0, 255, .7)) fixed;
@@ -20,25 +25,328 @@
  <script src="colors.js"></script>
 </head>
 <body>
+  <nav id="topMenu" >
+    <ul>
+       <li class="topMenuLi">
+         <a class="menuLink" href="1.html">한국의 이야기</a>
+         <ul class="submenu">
+            <li><a class="submenuLink longLink" href="1.html" target="_blank" >한국의 독립영웅</a></li>
+            <li><a class="submenuLink longLink" href="2.html"target="_blank">한국의 모순</a></li>
+            <li><a class="submenuLink longLink" href="3.html"target="_blank">한국의 소외계층</a></li>
+        </ul>
+      </li>
+      <li>|</li>
+      <li class="topMenuLi">
+          <a class="menuLink" href="2.html" target="_blank">세계 속 한국의 이야기</a>
+          <ul class="submenu">
+              <li><a class="submenuLink" target="_blank">세계 속 독립영웅</a></li>
+              <li><a class="submenuLink" target="_blank">한국과 외국</a></li>
+          </ul>
+      </li>
+      <li>|</li>
+      <li class="topMenuLi">
+          <a class="menuLink" href="3.html">제작자의 이야기</a>
+          <ul class="submenu">
+              <li><a class="submenuLink">VR이야기</a></li>
+              <li><a class="submenuLink">청소년들에게</a></li>
+              <li><a class="submenuLink">하나님의 이야기</a></li>
+          </ul>
+      </li>
+    </ul>
+  </nav>
+
   <h1> <a href="index.html">한국의 독립을 위하여</a> </h1>
   <input type="button" value="night" onclick="
      nightDayHandler(this);
   ">
 <div id="grid">
   <ol>
-    <li><a href = "1.html" text-decoration:underline;>한국의 이야기</a></li>
-    <li><a href = "2.html" text-decoration:underline; >세계 속 한국의 이야기</a></li>
-    <li><a href = "3.html" style = "color : red; text-decoration: none; " >제작자의 이야기</a></li>
+    <li><a href = "3.html" style = "color : red; text-decoration: none; ">소외된 우울증 환자, 그 아픔</a></li>
+    <li><a href = "3-2.html" text-decoration:underline;>---</a></li>
+    <li><a href = "3-3.html" text-decoration:underline; >---</a></li>
   </ol>
 
 <div id="article">
-  <br>
-   <p> "이 사이트는 한국의 숨겨진 역사, 소외계층, 부조리를 알리고
-    한국이 그 아픔으로부터 독립하여 아름다운 나라가 되길 바라며 제작되었습니다."</p>
+  <br><p><small>제 글은 유튜브 영상의 내용/댓글을 주로 요약하는 형식으로 쓰여져 있느니, 영상 링크를 타고 원작자의 영상을 감상하시길 권합니다.
+     <br>영상을 보셨다면, 추가로 제 글로 읽어주세요! 우울증 환자의 경험담 댓글로 이루어져 '위로' 받으실 수 있으실 것 입니다.</small></p>
+     <br><iframe width="560" height="315" src="https://www.youtube.com/embed/xgglt659PsI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+     <br><a href= "https://youtu.be/uGYpjtE0KaY">[정신과Q&A]당장 정신과에 와야 하는 위험신호</a>
+     <br><a href= "https://youtu.be/m8mVoUUzwP4">우울증을 기도로 극복할 수 있을까요?</a>
+     <br><a href= "https://youtu.be/x0Re0GBM0Pk">이유 없이 우울해요</a>
 
-   <h2>제작자의 이야기</h2>
+
+   <P><h2>소외된 우울증 환자, 그 아픔</h2>
+   <br>왜 우울증 환자가 소외계층일까요? 왜 혼자서 끙끙 앓아야만 할까요?
+
+   <br>[우울증 환자가 고민을 털어놓지 못하는 원인]
+   <br>가) 우울증을 바라보는 사회전체의 시선이 좋지 못함
+   <br>나) 우울증환자가 타인을 힘들게 하는 경우가 많다
+   <br>다) 우울증을 영적으로 바라봅니다.
+   <br>-ex. 교회: 정신적인 문제, 개인의 의지와 관련된 문제로 치부<=죄나 사탄의 문제니까 영적인 방법으로 해결해야 돼</P>
+
+   <P><h3>[<a href= "https://youtu.be/xgglt659PsI">'그건 여러분 잘못이 아니에요.'</a>의 댓글]</h3>
+   <br><i>ᄒ자유를찾아서</i>
+   <br>이거 진짜 공감되는게 우울증 걸리는 대부분이 다 타인 때문이다. 이게 감정적 학대를 당하다보면 삶의 의미도없고 죽음이 생각남. 생존 위협이라는게 맞음.
+   <br>그래서 죽기살기로 내 자존감을 갉아먹고 날 우울하게 만들고 공격하는 사람과 싸워야함. 진짜 나는 생존이 걸린 문제임.
+   <br>
+   <br>
+   <br><i>무강한</i>
+   <br>어떤 정신과 의사가 했다는 말이 생각나네요. "진짜 정신과에 와야 할 사람은 안 오고. 그 사람한테 상처받은 사람들만 정신과에 온다."
+   <br>멀쩡했던 사람을 미쳐버릴 정도로 괴롭히는 사람은 소시오패스인데요. 죄의식이 없고 착취적이기 때문에 경쟁적인 환경에서 잘 살아 남는답니다.
+   <br>확률적으로 열명 중 두명 정도는 소시오패스랍니다. '난 한 번도 소시오패스 본 적 없어' 이런 경우는 세상 살면서 없는데. 사람들이 잘 눈치를 못 챌 뿐이죠.
+   <br>
+   <br>
+   <br><i>통통이</i>
+   <br>저는 10대 시절 내내 저희 부모님이 저의 자존감을 학대했어요. 온갖 폭언과 폭력으로 저는 집에 가기가 너무 싫고 학교에만 있고 싶고 맨날 어떻게 죽을까 하는 생각만 했어요.
+   <br>대체 부모님이 왜 그러셨나 하고 지금 돌아보면 두 분도 너무 삶이 힘들고 깊은 우울증이 있었던것 같아요.
+   <br>그래서 사랑하는 자식이지만 못난 것만 보시고 본인들의 우울을 저에게 풀었던 것 같아요.
+   <br>밖에 나가면 절대 들을 일 없는 비난과 욕설을 집에서 매일같이 들으니 집에 오면 숨이 막히고 죽고싶고 매일 외로워서 혼자 울었어요.
+   <br>저는 그래서 어떻게든 공부 열심히 해서 집을 빠져나와서 서울에 가고, 일찍 돈벌어서 심리치료 오래 받고, 부모님과 연락 줄이고 그러면서 지금은 아주 건강해졌어요.
+   <br>제가 좋아지니 부모님도 좋아져서 지금은 그런 문제가 없답니다.
+   <br>부모도 본인이 건강하지 못하면 자녀에게 자존감 학대자가 될 수 있어요. 게다가 자녀는 어릴때는 어쩔 수 없이 부모와 살아야 하기 때문에 저렇게 맞서 싸울 수도 없구요.
+   <br>학대당하는, 가정불화로 힘든 10대분들 꼭 힘내서 잘 버티고 빨리 독립하세요. 정말 행복해지고 자존감 높은 건강한 사람 될 수 있고 제가 그렇게 했어요.
+   <br>부모가 평가하는 내가 진짜 내 가치가 아닌 경우 많아요.
+   <br>나는 그것보다 훨씬 더 가치있는 사람이고 오히려 그걸 세상이 인정해줄 거에요.
+   <br>저는 잘 버티고 버텨서 28살이 되었고, 지금은 그때 자살 안하길 잘했다 싶고 사는게 정말 감사하고 행복합니다.
+   <br>부모님을 사랑하고 존경하는것과, 부모님의 말도안되는 폭언을 듣고 사는거는 전혀 다른 문제에요.
+   <br>김미경선생님 이 영상 정말 감사하구요, 다들 남이 말하는 개소리 말고, 자신의 진짜 가치를 찾고 힘내셨음 좋겠습니다!
+   <br>
+   <br>
+   <br><i>해니라</i>
+   <br>타인에 의해서 자존감이 떨어지는건 정말 화나고 슬픈일인거 같아요 저도 오랫동안 자존감 학대를 받으며 꾹꾹 참아오기만 하다 뻥터져버려 아무것도 하지 않는 무기력한 상태까지 와버렸어요.
+   <br>지금은 일어서고 있고 자존감을 갉아먹는 사람들과 싸워야 한다는걸 알았어요 싸우는중입니다! 우리는 싸워야해요 우리의 생존을 위해
+   <br>감사합니다. 힘을 내게 됩니다!💗
+   <br>
+   <br>
+   <br><i>boyz th</i>
+   <br>약자라서 생기는 우울증. 정확하고 유의미한 포인트인 것 같아요. 평생을 따라다니는 어마어마한 스트레스죠.
+   거의 모든 인간관계가 위계질서로 이루어진 한국사회에서 약자들은 맨정신으로 살기 정말정말 힘든 것 같아요. 여성들, 엄마들, 어린이, 청소년들...
+   <br>
+   <br>
+   <br><i>소소루</i>
+   <br>김미경 언니 이번 영상의 이야기가 나의 이야기 인것 같아 가슴이 울었어요..
+   <br>남편의 지속적인 무시와 괄시를 받고 자존감이 너무 많이 떨어진채로 저조차 저 자신을 사랑하지 못하고 늘 울분과 서러움이 많았어요..
+   <br>싸우라는 말, 나를 지키라는 말 꼭 새기겠습니다. 감사합니다
+   <br>
+   <br>
+   <br><i>마음티켓</i>
+   <br>저는 10년 전에 대인관계기피증이 생길만한 일을 겪으면서 우울증을 심각하게 앓았었고 그게 회사생활에도 트라우마를 주더군요.
+   <br>결국 뜨문뜨문 우울증이 가끔씩 찾아왔지만 그때마다 오히려 제 자신을 정확하게 바라보려 노력하는 방법으로 승화시켜보았습니다.
+   <br>그래서 지금은 제 적성에 맞게 살 수 있게 되었어요. 우울증이라는 고난은 다르게보면 내가 아직 모르던 나를 찾으라는 신호인 것 같아요.
+   <br>더 나아가면 내가 더 빠르게 행복하고 성공할 수 있는 기회로 승화시킬 수 있는 것 같아요.</P>
+   <br>
+   <br>
+
+   <P><br><h3>[<a href= "https://youtu.be/x0Re0GBM0Pk">이유 없이 우울해요</a>의 댓글]</h3>
+   <br><i>89889151 5</i>
+   <br>지금은 성형 피부과가 돈 제일 많이 벌지만 미래엔 정신과가 제일 돈 많이 벌 것 같음.
+<br>
+<br>
+   <br><i>wave _21</i>
+   <br>진짜 하다하다 내가 누구지? 라는생각도 하게됨..
+<br>
+<br>
+   <br><i>융 융</i>
+   <br>누가 그랬는데 누구를 위한 우울이냐고...진짜 화날정도로 누구를 위한 우울이냐고..
+<br>
+<br>
+   <br><i>거미인간</i>
+   <br>저도 우울증인걸 모르다 최근에 우울증인걸 알았는데 이러지도 저러지도 못하는 입장입니다...
+   <br>엄마는 우울증을 걸린 사람을 할일없고 정신상태가 썩었다고 말하더라구요...
+   <br>그러니 더욱 제 상태에 대해 제가 부정하게되고 우울의 그림자가 저를 하루하루 갉아먹더라구요...
+<br>
+<br>
+   <br><i>보니양</i>
+   <br>세상사람 다 우울증있나보구나.. 난 나만 있는줄 알았지..
+<br>
+<br>
+   <br><i>임채민</i>
+   <br>'이겨내지 못해서 한심한 것 같아요' 이렇게 자신을 억누르는 생각은 던져버리세요.!!
+   <br>암이 걸렸다고 감기가 걸렸다고 자신을 탓하거나 그러지 않는 것처럼 사연자분께서도 우울하다고 자신을 탓하지 마시고 병원에서 도움을 받는게 좋을 것 같아요.
+   <br>건강하다 건강하지못하다는 이분법적인 것이 아니라 연속된 스펙트럼이라고 생각해요.
+   <br>현재의 내가 건강하지 못한 쪽에 있으면 열심히 노력하고 도움받아서 건강한 쪽으로 돌아오시면 되는거에요!!^^ 힘내세용!
+<br>
+<br>
+   <br><i>H K</i>
+   <br>1. 하루 종일 우울 / 흥미 감소 중 한가지 반드시 포함,
+<br>
+   <br>2. 체중 감소(혹은 증가)
+   <br>수면습관 변화(감소 혹은 증가)
+   <br>정신초조
+   <br>피로
+   <br>죄의식/무가치함
+   <br>사고주의력 저하
+   <br>자살 사고 혹은 시도
+<br>
+   <br>1,2 포함하여 5가지 이상의 증상이 2주동안 지속되는가
+<br>
+   <br>현 DSM5의 우울증 진단 기준입니다. 제보자님께서 현재 겪으시는 우울감이 일상생활수행력에 지장을 줄 정도로 강하다면 혼자 이겨내시는 것보다 전문의와 상담하시는 것이 더 나아보입니다..
+   <br>지금 그 우울감이 일시적인 현상이었으면 좋겠습니다.. 좋은사람들 자주 만나시구 마음의 얘기도 털어놓으면 더 나아지는데 도움이 될 것같아요!
+<br>
+<br>
+   <br><i>잉 잉</i>
+   <br>우울증이면 원래 그래요ㅠㅠ
+   <br>“그래도 의지를 가지고 뭐라도 해야 낫지”라는건 다리가 부러진 사람한테 뛰어봐 그래야 낫지 하는거예요...
+   <br>정신과에 가는게 별게 아니에요 귀가 이상하게 먹먹하면 뭔지 모르겠지만 이비인후과에 가듯 가면 되는거예요
+<br>
+<br>
+   <br><i>썬ᄂ</i>
+   <br>이 영상을 보고 있는 것 자체가 나아지려고 노력하고 있고 우리가 단단한 사람이라는 증거
+   <br>혹시 이 댓글을 사연자같은분이 보고계시다면 당신은 나약하지않고 멋진 사람이라고 말해주고 싶음.
+<br>
+<br>
+   <br><i>신젼</i>
+   <br>가장 중요한 건 우울해하는 나를 달래주는 것 같아요. “나 문제 있어. 나 왜 그러지? 이런 것도 못 이겨” 이게 아니라 “괜찮아. 울고 싶으면 울어도 돼” 하고 자신을 달래주세요.
+   <br>과거의 기억이 문제라면 그때 상처받았던 나를 달래주세요.
+   <br>우울증은 건강할 때는 괜찮다가 감기처럼 정신적 면역력이 약해졌을 때 찾아오는 것 같아요. 그러니까 약해져있는 자신을 조금씩 달래주면서 마음이 튼튼해졌으면 좋겠어요ㅎㅎ</P>
+   <br>
+   <br>
+<br> <image src="depression.jpg" width="300" height="350" alt="많이 힘들었죠?">
 
 
+   <P><br><h3>[<a href= "https://youtu.be/uGYpjtE0KaY">[정신과Q&A]당장 정신과에 와야 하는 위험신호</a>의 댓글]</h3>
+<br>
+   <br><i>k jj</i>
+   <br>안그래두 접근이 어려운데 가격때문에 2차로 더 어렵지 않나 싶어요. 이런 복지에 대해서 많이 개선되었으면 좋겠어요..
+   <br>마음의 병은 감기 같은건데 치료받지 못해서 더 키우는 느낌입니다ㅜㅜ 시선이 많이 바뀌길 기도해요.
+<br>
+<br>
+   <br><i>유연리</i>
+   <br>10분 단위로 돈이 달라진다는게 살짝 현타가 오네요..(*정신과 치료 비용)
+<br>
+<br>
+   <br><i>헤헤</i>
+   <br>우리나라가 자살률이 이렇게 높은데, 우울증 병원치료 등의 적극적인 방법을 국가에서 장려는 못할망정, 보험 가입 제한 등의 '환자가 치료를 꺼리게 만드는 요인들'을
+   <br>법적으로 해결할 의지가 없다는게 답답합니다.
+   <br>f코드기록이 있더라도 보험거부를 할 수 없게 법적장치를 만들어야죠.
+   <br>한강다리에 문구만 써놓을게 아니라..
+   <br>어차피 자살로죽으면 보험회사에서 돈 지급 안해주면서 왜 f코드기록자의 보험가입을 거절하는지 납득도 되지않고,
+   <br>설사 납득할만한 이유가 있다해도 그건 기업의 입장이고,
+   <br>국가의 입장에선 일단 수많은 국민들이 우울증으로 죽어나가는것부터 막아야 하는거 아닌가요?
+   <br>그걸 나라에서 문제삼지 않는다는것도 답답하고요.
+<br>
+<br>
+   <br>그리고 경찰채용에서 정신과기록을 조회한다는 기사를 봤습니다.
+   <br>뭐 그 의도가 아주 이해가 안되는건 아니지만, 경찰에서도 조회할수있다는건
+   <br>사실상 "본인외에 아무도 조회할수 없다" 라는 많은 의사들의 설명은 그저 이론에 불과한것 아닌가 싶어요.
+   <br>이론상으로 그런것과, 실제는 다를수도 있다는거겠죠.
+   <br>전 경찰준비생은 아니지만 그 기사를 보고나서 정신과에 가는걸 포기했습니다.
+   <br>의사가 정신과에 가보라고 권했는데도요. 보험도 이유 중 하나고요.
+   <br>저같은사람 많을거에요 가야되는데 못가고있는사람.
+<br>
+<br>
+   <br><i>마리클슈마스</i>
+   <br>정신과에 다니는 고3입니다. 저는 정신과를 고1 말부터 다니기 시작하였습니다. 정신과에 가면 되게 사람많아요. 되게 멀쩡해보이는 사람도 많아요.
+   <br>저도 제가 정신과 다닌다고 말하면 '니가? 안그래보이는데'라고 말하는 사람 많습니다.  죽음에 대해 생각하기 시작했다면, 정말 힘들다면 병원에 가는 게 좋다고 생각합니다.
+   <br>감기는 병원에 가도 되고, 안 가면 혼내는 사람도 있는데, 마음의 감기는 왜 가면 이상하게 보는 사람들이 있는건지 조금 안타깝습니다.
+   <br>그리고 제 입장이 맞는 건 아니겠지만 힘들어 하는 사람에게 '힘내'라고 말하면 부담스러워 하는 사람도 많아요. 살아가는 것이 아니라 버텨가는 사람들도 많습니다.
+<br>
+<br>
+   <br><i>월청</i>
+   <br>여기 보니까 너무ㅠㅠㅠ정신과 갔다가 상처만 받고 오시는 분이 너무 많으신것 같아요..
+   <br>이 영상에서도 말했듯이 사실상 정신과에서는 상담을 많이 해주질 않아요.정신과 의사분에게 상대방은 환자이지 내담자가 아니니까요..
+   <br>진심으로 심리적 치료를 받고싶고 그냥 확 울어버리고싶고 그런 경우엔 정신과가 아니라 상담소를 가셔야해요.
+   <br>상담소도 다닌다고 해서 막 미래에 지장받는것도 아니고 그냥 내 마음을 누군가한테 털어놓고 싶을때 가서 다 이야기하면 속 정말 시원해지고 그렇거든요!
+   <br>정신과 같은 경우에는 임상심리, 즉 약을 통한 치료가 주가 되기때문에 약이 아닌 이상 상담치료는 기대하기 힘드실 수 있어요..!
+<br>
+<br>
+   <br><i>Clue BLUE</i>
+   <br>저는 현재 공황장애/ 공황발작/ 수면장애/ 우울증을 거쳐 조울증을 겪다가 건강해지고 불안장애의 약과 소량의 수면 유도제를 먹고 있는 상태입니다.
+   <br>아무 생각도 아무 일도 못하고 살면서 대학병원 입원만 6번째 왔다갔다 3년 동안 내리 입원 하면서 느낀것은
+   <br>환자들이 어딘가 가장 마음이 순수하고 외로운 이들이고 세상에서 가장 쓰게 벌받아야할사람은 떵떵거리고 밖에서 잘 사는데 피해받은 사람들은 인생 잃은채 병원에 있더군요.
+   <br>제가 살아가는 과정에서 이런 병이 있다해서 저를 함부로 또는 저와 같은 친구들을 평가하지 않았으면 좋겠습니다.
+   <br>요즘 이런 컨텐츠가 유투브에 자주 나와서 세상 편견에 마주서고 있는 현실인것같습니다.
+   <br>이러한 병을 얻기전에 몰랐던 세상을 알게 되었고 더 성장한 것 같습니다. 자살시도만 기억이 안날만큼 너무나 많았고 자해만 7번을 했습니다.
+   <br>그때는 그렇게 하면 마음의 짐을 내려 놓고떠날거라 생각했는데 좋은 심리치료사, 의사 선생님들만나서
+   <br>누구보다 건강하고 제 위치에서 포기했던 대학원 공부도 다시하고 아이들도 잘 가르치고 있습니다.
+   <br>지금은 누구보다 살고 싶어서 더 열심히 제 위치에서 살게 되었습니다.
+   <br>다른 이들은 제게 무심코 '너는 의지가 없으니까, 너는 언제 약 끊니?, 저여자는 결혼상대로는 안되겠다'
+   <br>무언가 제가 실수하게되면 '쟤 그런 병 있고 약 먹는다'며 한국사회에서 만연하게 당연하게 쳐다보는 시선들과 말에 참 힘이 듭니다.
+   <br>언젠가 내가 앓고 있는 것들이 세상을 바라보는 힘이 되어서 남들을 도와줄 수 있고 매일 약을 먹어야하는 이 생활에
+   <br>가끔은 울어도 나는 약했던 그때보다 더 스스로 강해지고 있음을 저는 압니다.
+   <br>자신의 삶은 자신의 것, 제가 하고자 하는 말은 이런 마음의 병을 가지고 있다해서 함부로 판단하고 시선을 주지 않았으면 합니다.
+   <br>많은 이야기들을 들어주고 힘내라는 말보다 힘을 빼라고 그렇게 이겨낼수있는 힘을 주시기를
+<br>
+<br>
+   <br><i>NINAZZY</i>
+   <br>어릴적 이모랑살며 많이 맞기도하고 힘들어했는데 이모가 정신과를 데려감. 이야기하면 의사가 이모한테 이야기할 거 같아서 얘기 안 하려는데 의사가 속을 긁으며 자극함.
+   <br>울며 이야기했는데 의사가 이모한테 다 이야기함. 그날 존나 맞음. 요즘 힘들어서 정신과 생각하는데 자꾸 그 생각나서 못 가겠음.
+<br>
+<br>
+   <br><i>크림cream</i>
+   <br>누구나 정신적으로 아플수있어요
+   <br>사회의 인식부터 바뀌면 좋겠어요😞
+<br>
+<br>
+   <br><i>lape</i>
+   <br>정신건강의학과에 대해 금액 걱정 많으신분들이 계실거라고 생각해요
+   <br>제 스스로도 병원에 가야겠다는 생각이 들어 가려고보니 금액이 얼마일지 모르겠더라구요
+   <br>그래서 그냥 부딪쳐봤어요 가서 이야기했습니다
+   <br>제가 지금 얼마가 있는데 금액이 어떻게 되냐고 어쭈어보니 초진비용이 비싸야 3만원정도고 다음부턴 만원도 안나올거라고 하시더라구요
+   <br>덕분에 마음 편하게 진료받고 나왔었습니다
+   <br>지금은 상태에 따라 받는 약이 달라 금액 변화가 있지만 짧은 진료 상담 후 2주일치 약받으면 8천원~만원정도 나오더라구요
+   <br>금액때문에 정신건강의학과를 갈까말까 고민하신다면 걱정마시고 한번 가보세요
+<br>
+<br>
+   <br><i>아갈규희</i>
+   <br>저는 심리상담센터에 갔을 때 1시간에 10만원이었어요. 얘기하다보니 한시간이 금방 가더라고요.
+   <br>상담치료가 도움이 되는 분들도 계시겠지만 저는 두세번 다니다 관뒀어요. 제가 비정상적인 사람으로 느껴지는 느낌이 싫었고 남한테 제 얘기를 해야하는 것도 싫었어요.
+   <br>이것도 제 병이겠죠. 그래도 내 말에 공감해주고 긍정적인 반응을 보이는 사람과 얘기하는게 조금은 도움이 됐어요.
+<br>
+<br>
+   <br><i>dpffnldps58</i>
+   <br>우울증은 감기에 비유할 수 없다고 생각해요
+   <br>감기에 걸렸다고 죽을생각을 하진 않는것 처럼요
+   <br>없어진것 처럼 보이다가도 내 깊은곳 안에 숨어있다가 야금야금 좀먹는게 우울증이에요 쉽고 간단하게 생각하면 안될것같아요
+<br>
+<br>
+   <br><i>윤창현</i>
+   <br>저 같은경우엔 우울증인줄 알았는데 조울증 이었습니다.
+   <br>혹시라도 이 영상과 제 댓글 보시는 마음 힘드신 여러분들. 앓지마시고 병원가셔서 약의 도움을 빨리 받는게 가장 덜 힘든 방법입니다.
+   <br>저 같은 경우는 입원 2주하고 약물 치료중인데 정말 극심하다면 입원도 정말 좋은 것 같아요.
+   <br>전 입원치료했을때가 가장 덜 힘들고 좋았습니다.
+<br>
+<br>
+   <br><i>H</i>
+   <br>저는 올 해 겨울에 정신과는 아니고 상담센터를 10회 다녀왔어요. 어느 날부터 모든 게 부담되고 무섭고 먹은 건 다 체하고 눈물은 계속 쏟아지고..
+   <br>상담 간 날 부터 뭔가 안심됐어요. 뭔가 살다가 희망의 끈을 잡은 느낌? 저는 약보다 저의 마음을 스스로 들여봐 줄 수 있도록 도와주는 분이 필요했더라구요ㅎㅎ
+<br>
+<br>
+   <br><i>재바우</i>
+   <br>잘웃던사람이였는데 요즘 일주일넘게 웃어본적이 없는거같고 하루종일 우울하고 감정잡히면 하염없이 눈물만나고 내가 왜 이렇게까지 살아야하나싶고...
+   <br>방학하기전에 친구들이랑 사이 안 좋아져서 개학 걱정 때문에도 그렇고 친구관계가 이렇게 되니까 우울증이 왔었나봐요
+   <br>근데 막상 학교가보니까 제가 그렇게 스트레스 받았어야할정도로 힘들진않더라구요
+   <br>하고싶은말은, 우울증 이런거걸리면 진짜 주변사람들(가족, 친구들, 직장인들 등)의 관심이랑 사랑이 약인거에요..
+   <br>저도 며칠전부터 친구들덕분에 다시 웃음찾아서 진짜 행복하게지내고있어요 아마 제가 방학동안 상상하면서 스트레스 받은게 개학해서도 그랬으면 전 아마 정신병걸리고도 남았을거에요
+<br>
+<br>
+   <br><i>xx Saint xx</i>
+   <br>마음의 병, 특히 우울증 같은 병들은 정말 감기와 비슷하다고 생각해요. 저도 환자로써 처음엔 "이게 무슨 감기야, 암이지" 라고 생각했어요.
+   <br>그런데 7년동안 정신질환을 앓고 나니까 감기라는 말이 정말 와닿아요. 정말 감기처럼 사람마다 방치했을때 자연스럽게 자가치유 되는 경우도,
+   <br>마음의 면역력이 약한 사람이 방치했을땐 죽을 수도 있고 "다 나았나? 이제 괜찮나봐" 라고 생각될 때 쯤 다시 발병하고.
+   <br>또한 위에서 말했다시피 누군가는 우울이 자가치유되는 사람이 있기에
+   <br>감기처럼 "그거가지고 아프다고 징징대는거야? 그게 뭐가 대수라고, 푹 쉬면 알아서 나아" 라고 말하는 사람도 있어요.
+   <br>하지만 모두가 알아야 할 것은 감기가 치명적인 질환으로 다가오는 사람이 있듯이 마음의 감기도 누군가에겐 생명을 앗아갈 정도의 치명적인 질환이 될 수 있다는 것을 알아야 해요.
+   <br>그래서 마음의 감기가 없는 사람은 마음의 감기가 있는 사람에게 함부로 말하는 것을 주의해야하고
+   <br>마음의 감기에 이미 걸려버린 사람은 나의 마음의 면역력은 어느정도일까를 생각하고 꼭 병원이나 상담시설을 가보는걸 추천할게요.
+   <br>우리 모두 마음의 감기, 꼭 치유하고 행복해지길 바랄게요.</P>
+<br>
+<br>
+<br>
+   <P><br><h3>[마무리]</h3>
+   <br>댓글 잘 감상하셨나요?
+<br>
+
+   <br>저는 음..사람들 앞에서는 잘 웃고 혼자 있을 때는 끝없이 우울해지는 모습을 보면서 '힘든 척'한다고 생각을 해왔어요.
+   <br>그렇지만, 우울한 모습도 밝은 모습도 모두 나 자신의 색깔이라는 것을 알았습니다.
+<br>
+   <br>큰 힘이 되진 못하겠지만, 이 글을 봐주신 여러분 모두 자신을 사랑하게 되시길 바랍니다.
+   <br>다양한 모습 모두 여러분의 색깔이에요!
+<br>
+   <br>또한, 앞으로 주변에 힘든 사람이 있다면 힘 낼 것을 강요하지 마세요.
+   <br>그저 자신이 늘 옆에 있겠다는 것을 알려주고, 들어주고, 안아주고 기다려주세요.
+   <br>그렇게 우리, 아름다운 대한민국을 만듭시다.</p>
+<br>
     <div id="disqus_thread"></div>
      <script>
 
