--- a/index.html
+++ b/index.html
@@ -31,8 +31,20 @@
   gtag('js', new Date());
   gtag('config', 'G-KDKJMN1Q2S');
 </script>
-
+<link rel="stylesheet" href="style2.css">
+<link href="https://fonts.googleapis.com/css?family=Nanum+Myeongjo&display=swap" rel="stylesheet">
+<style type="text/css">
+body {font-family: 'Nanum Myeongjo', serif;}
+</style>
   <style>
+  body {
+  background: linear-gradient(-45deg, rgba(255, 0, 0, 0.7), rgba(0, 0, 255, .7)) fixed;
+   /*background-image: url(koreA.jpg);*/
+   background-size: cover;
+   margin: 0;
+   text-align: center;
+  }
+
   a{
     color: black;
   }
@@ -41,73 +53,6 @@
     border-bottom:none;
     }
 
-  }
-  #topMenu {
-        height: 30px; /* 메인 메뉴의 높이 */
-        width: 850px; /* 메인 메뉴의 넓이 */
-  }
-  #topMenu ul {  /* 메인 메뉴 안의 ul을 설정함: 상위메뉴의 ul+하위 메뉴의 ul */
-        list-style-type: none; /* 메인 메뉴 안의 ul 내부의 목록 표시를 없애줌 */
-        margin: 0px; /* 메인 메뉴 안의 ul의 margin을 없앰 */
-        padding: 0px; /* 메인 메뉴 안의 ul의 padding을 없앰 */
-  }
-  #topMenu ul li { /* 메인 메뉴 안에 ul 태그 안에 있는 li 태그의 스타일 적용(상위/하위메뉴 모두) */
-        color: white; /* 글씨 색을 흰색으로 설정 */
-        background-color: #2d2d2d; /* 배경 색을 RGB(2D2D2D)로 설정 */
-        float: left; /* 왼쪽으로 나열되도록 설정 */
-        line-height: 30px; /* 텍스트 한 줄의 높이를 30px로 설정 */
-        vertical-align: middle; /* 세로 정렬을 가운데로 설정 */
-        text-align: center; /* 텍스트를 가운데로 정렬 */
-        position: relative; /* 해당 li 태그 내부의 top/left 포지션 초기화 */
-  }
-  .menuLink, .submenuLink {     /* 상위 메뉴와 하위 메뉴의 a 태그에 공통으로 설정할 스타일 */
-        text-decoration:none; /* a 태그의 꾸밈 효과 제거 */
-        display: block; /* a 태그의 클릭 범위를 넓힘 */
-        width: 150px; /* 기본 넓이를 150px로 설정 */
-        font-size: 12px; /* 폰트 사이즈를 12px로 설정 */
-        font-weight: bold; /* 폰트를 굵게 설정 */
-        font-family: "Trebuchet MS", Dotum; /* 기본 폰트를 영어/한글 순서대로 설정 */
-  }
-  .menuLink { /* 상위 메뉴의 글씨색을 흰색으로 설정 */
-      color: white;
-  }
-  .topMenuLi:hover .menuLink {     /* 상위 메뉴의 li에 마우스오버 되었을 때 스타일 설정 */
-      color: red;                  /* 글씨 색 빨간색 */
-      background-color: #4d4d4d; /* 배경색을 밝은 회색으로 설정 */
-  }
-  .submenuLink { /* 하위 메뉴의 a 태그 스타일 설정 */
-      color: #2d2d2d; /* 글씨 색을 RGB(2D2D2D)로 설정 */
-      background-color: white; /* 배경색을 흰색으로 설정 */
-      border: solid 1px black; /* 테두리를 설정 */
-    margin-top: -1px; /* 위 칸의 하단 테두리와 아래칸의 상단 테두리가 겹쳐지도록 설정 */
-  }
-  .longLink {  /* 좀 더 긴 메뉴 스타일 설정 */
-      width: 190px; /* 넓이는 190px로 설정 */
-  }
-  .submenu { /* 하위 메뉴 스타일 설정 */
-      position: absolute; /* html의 flow에 영향을 미치지 않게 absolute 설정 */
-      height: 0px; /* 초기 높이는 0px로 설정 */
-      overflow: hidden; /* 실 내용이 높이보다 커지면 해당 내용 감춤 */
-      transition: height
-      .2s; /* height를 변화 시켰을 때 0.2초간 변화 되도록 설정(기본) */
-      -webkit-transition: height .2s; /* height를 변화 시켰을 때 0.2초간 변화 되도록 설정(구버전 크롬/사파라ㅣ) */
-      -moz-transition: height .2s; /* height를 변화 시켰을 때 0.2초간 변화 되도록 설정(구버전 파폭) */
-      -o-transition: height .2s; /* height를 변화 시켰을 때 0.2초간 변화 되도록 설정(구버전 오페라) */
-  }
-  .topMenuLi:hover .submenu { /* 상위 메뉴에 마우스 모버한 경우 그 안의 하위 메뉴 스타일 설정 */
-      height: 93px; /* 높이를 93px로 설정 */
-  }
-  .submenuLink:hover { /* 하위 메뉴의 a 태그의 마우스 오버 스타일 설정 */
-      color: red; /* 글씨색을 빨간색으로 설정 */
-      background-color: #dddddd; /* 배경을 RGB(DDDDDD)로 설정 */
-  }
-
-  body {
-    background: linear-gradient(-45deg, rgba(255, 0, 0, 0.7), rgba(0, 0, 255, .7)) fixed;
-    /* url('koreA.jpg') fixed;*/
-   background-size: cover;
-    margin: 0;
-    text-align: center;
   }
 
   </style>
@@ -168,26 +113,26 @@
        <li class="topMenuLi">
          <a class="menuLink" href="1.html">한국의 이야기</a>
          <ul class="submenu">
-            <li><a class="submenuLink longLink">독립영웅</a></li>
-            <li><a class="submenuLink longLink">한국의 부조리</a></li>
-            <li><a class="submenuLink longLink">한국의 소외계층</a></li>
+            <li><a class="submenuLink longLink"  target="_blank" >한국의 독립영웅</a></li>
+            <li><a class="submenuLink longLink" href="2.html" target="_blank">한국의 모순</a></li>
+            <li><a class="submenuLink longLink" href="3.html" target="_blank">한국의 소외계층</a></li>
         </ul>
       </li>
       <li>|</li>
       <li class="topMenuLi">
-          <a class="menuLink" href="2.html">세계 속 한국의 이야기</a>
+          <a class="menuLink" href="4.html" target="_blank">세계 속 한국의 이야기</a>
           <ul class="submenu">
-              <li><a class="submenuLink">세계 속 독립영웅</a></li>
-              <li><a class="submenuLink">한국과 외국</a></li>
+              <li><a class="submenuLink" target="_blank">세계 속 독립영웅</a></li>
+              <li><a class="submenuLink" target="_blank">한국과 외국</a></li>
           </ul>
       </li>
       <li>|</li>
       <li class="topMenuLi">
-          <a class="menuLink" href="3.html">제작자의 이야기</a>
+          <a class="menuLink" href="6.html">제작자의 이야기</a>
           <ul class="submenu">
-              <li><a class="submenuLink">VR이야기</a></li>
-              <li><a class="submenuLink">청소년들에게</a></li>
-              <li><a class="submenuLink">하나님의 이야기</a></li>
+              <li><a class="submenuLink" href="6.html" target="_blank">VR이야기</a></li>
+              <li><a class="submenuLink" target="_blank" >청소년들에게</a></li>
+              <li><a class="submenuLink" target="_blank">하나님의 이야기</a></li>
           </ul>
       </li>
     </ul>
@@ -202,27 +147,29 @@
 
     <h2>사이트 소개</h2>
 
-    <br>안녕하세요. 한국을 사랑하시는 여러분, 반갑습니다.
+    <br>한국을 사랑하시는 여러분, 반갑습니다.
     <br>이 사이트는 한국을 좀 더 따뜻하게 변화시키고자 만든 사이트입니다.
-    <br>이곳에서 한국과 관련된 다양한 자료들을 모아놓은 게시물들을 볼 수 있고, 여러 참고링크를 타고 한국에 대해 더 알아갈 수 있습니다.
+    <br>아직 학생이라 지적 역량이 부족한 탓에 한국과 관련된 다양한 동영상 자료들을 모아놓았습니다.
+    <br>제 게시물을 한국과 여러분을 이어주는 통로로 생각하시고 여러 참고링크를 타고 한국을 알아가시길 권합니다.
 
 
     <p>그럼, 따뜻한 눈으로 감상해주시길 부탁드립니다.</p>
 
-      <br> "나는 우리 나라가 세계에서 가장 아름다운 나라가 되기를 원한다.
+    <font color="#FFB2D9"><small> <br> "나는 우리 나라가 세계에서 가장 아름다운 나라가 되기를 원한다.
       <br>  가장 부강한 나라가 되기를 원하는 것은 아니다. 내가 남의 침략에 가슴이 아팠으니, 내 나라가 남을 침략하는 것을 원치 아니한다.
       <br>  우리의 부력은 우리의 생활을 풍족히 할 만하고,
       <br>  우리의 강력은 남의 침략을 막을 만하면 족하다. 오직 한없이 가지고 싶은 것은 높은 문화의 힘이다.
-                                                                     <div style="text-align:center"> -백범 김구"</div>
+              -                                                       <div style="text-align:center"> -백범 김구"</div></small></font>
       <br>
       Everyone who loves Korea! nice to meet you. This site is written in HTML, not relying on site tools.
       Please understand me if I'm not good at it!
       <p>
       <a href = "https://youtu.be/AulHEVz75lY"
          target="_blank" title="an introductory video of Korea"> What country is Korea?</a>
+         <iframe width="560" height="315" src="https://www.youtube.com/embed/AulHEVz75lY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </p>
 
-      <br>이 사이트는 제작자의 동아리에서 HTML로 제작한 것입니다.
+      <br>이 사이트는 제작자의 동아리에서 제작한 것입니다.
       <br>많이 서툴더라도 이해해주시길 바랍니다!
 
 
