--- a/1.html
+++ b/1.html
@@ -3,7 +3,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width" />
 <head>
- <title>for-korean story</title>
+ <title>200쪽 보고서를 외운 독립영웅, 오광심</title>
 <link rel="stylesheet" href="style.css">
 <script src="colors.js"></script>
 <link rel="stylesheet" href="style2.css">
