--- a/2-2.html
+++ b/2-2.html
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width" />
 <head>
  <meta name="robots" content="index,follow" />
- <title>for-korea</title>
+ <title>망 중립성2 - 유튜브와 통신사, 속사정</title>
  <link rel="stylesheet" href="style2.css">
  <link rel="stylesheet" href="style.css">
  <link href="https://fonts.googleapis.com/css?family=Nanum+Myeongjo&display=swap" rel="stylesheet">
