--- a/2-3.html
+++ b/2-3.html
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width" />
 <head>
  <meta name="robots" content="index,follow" />
- <title>for-korea</title>
+ <title>미해결된 어뷰징 기사들, 설리</title>
  <link rel="stylesheet" href="style2.css">
  <link rel="stylesheet" href="style.css">
  <style>
