--- a/3.html
+++ b/3.html
@@ -3,7 +3,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width" />
 <head>
- <title>for-Producer's Dream</title>
+ <title>소외된 우울증 환자, 그 아픔</title>
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="style2.css">
 <meta name="robots" content="index,follow" />
